# SpeechTrainerAI

./: App.tsx  app.json  buildAIprompt.js  package-lock.json  package.json
__tests__/: phraseSelection.test.ts
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/speechtrainerai/: ReactNativeFlipper.java
android/app/src/main/cpp/: CMakeLists.txt  speechtrainer_jni.cpp
android/app/src/main/cpp/engine/: AudioBuffer.h  EngineState.h  SpeechEngine.cpp  SpeechEngine.h  Threading.h
android/app/src/main/cpp/jni/: speechtrainer_jni.cpp
android/app/src/main/java/com/speechtrainerai/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt
android/app/src/main/java/com/speechtrainerai/asr/: AsrEngine.java  AsrEngineManager.java  VoskAsrEngine.java
android/app/src/main/java/com/speechtrainerai/rn_java_connector/: ModelInstaller.java  RnJavaConnectorModule.java  RnJavaConnectorPackage.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/speechtrainerai/: ReactNativeFlipper.java
docs/: SpeechTrainerPhrase-adaptive-selection-flowchart.md  SpeechTrainerPhrase-flowchart.md
ios/: Podfile
ios/SpeechTrainerAI/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/SpeechTrainerAI.xcodeproj/: project.pbxproj
ios/SpeechTrainerAI.xcodeproj/xcshareddata/xcschemes/: SpeechTrainerAI.xcscheme
ios/SpeechTrainerAITests/: SpeechTrainerAITests.m
src/: audioPermission.ts  speechOrchestrator.ts  testVoskAssets.ts  tts.ts  useSpeechResults.ts
src/asr/: AsrService.ts  engines.ts
src/components/: AnchoredOverlay.tsx  Settings.tsx  SpeechCompare.tsx  SpeechTrainerPhrase.tsx  Toolbar.tsx  VariantPicker.tsx  phraseSelection.ts
src/db/: settings.ts  speechDb.ts  testdata.json
src/debug/: debugCommands.ts  registerDebugApi.ts  testPhraseData.ts
src/helpers/: webApiWrapper.ts
src/speech/asr/: AsrService.ts  types.ts  useSpeechResults.ts
src/speech/flow/: speechOrchestrator.ts
src/speech/tts/: TtsService.ts
src/types/: react-native-sqlite-storage.d.ts
